@startuml "Diagrama de clases"
header Diagrama de clases de casos de uso
title  Presentar Examen 
footer equipo 3

skinparam style strictuml
skinparam ClassBackGroundColor EEEEEE
skinparam ClassBorderThickness 1.5
skinparam dpi 300

class ExamListView <<JFrame>>{
    -Button takeExam
    +takeExam()
}

class InstructionsView <<JFrame>>{
    -JLabel instructionsTitle
    -TextView instructionsText
    -Button acceptInstructions
    -Button declineInstructions
    +confirmInstructions()
    +displayInstructions()
    +loadInstructions()
}

class Button <<JButton>>{
}

class RadioButton <<JRadioButton>>{    
}

class TextView <<JPanel>>{
    -JTextArea text
}

class TextLine <<JLabel>>{
    -JLabel lineText
}

class TakeExamController{    
    +getExamInstructions()
    +getExamQuestions()
    +startExam()
    +evaluateStudentAnswers()
}

class TakeExamView <<JFrame>>{ 
    -JLabel title   
    +displayQuestion()
    +submitAnswer()
    +nextQuestion()
    +previousQuestion()
}

class TakeExamViewLeftSide <<JPanel>>{
    -Button finishExam
    -JLabel title
    -JLabel studentName
    -JLabel examName

}

class TimeCronometer <<JPanel>>{
    -Timer timer
    -JLabel timeLabel
}

class TakeExamViewRightSide <<JPanel>>{
    -JProgressBar questionsCounter
    -Button next
    -Button previous
}

class DomainNameLeftPanel<<JPanel>>{
}

class DomainNameRightPanel<<JPanel>>{
}

class QuestionPanel <<JPanel>>{
    
}

class AnswersPanel <<JPanel>>{

}

class Exam{
    -int examID
    -int duration
    -String instructions
    -String title
    +int getExamID()
    +int getDuration()
    +String getInstructions()
    +String getTitle()
    +setExamID()
    +setDuration()
    +setTitle()
    +setInstructions()
}

class Question{
    -int questionID
    -String questions
    -String explanation
    -bool isCorrectAnswer
    -int correctAnswerID
    +bool getIsCorrectAnswer()
    +String getQuestions()
    +int getQuestionID()
    +String getExplanation()
    +setQuestionID()
    +setExplanation()
    +setIsCorrectAnswer()
    +setCorrectAnswerID()
    +setQuestions()
}

class Answer{
    -int answerID
    -int questionID
    -String answerDescription
    +int getAnswerID()
    +int getQuestionID()
    +String getAnswerDescription()
    +setAnswerID()
    +setQuestionID()
    +setAnswerDescription() 
}

TakeExamController-Exam
TakeExamController--InstructionsView
ExamListView-down->InstructionsView
InstructionsView-->TextView
TakeExamController--TakeExamView
TakeExamView-->TakeExamViewLeftSide
TakeExamView-->TakeExamViewRightSide
TakeExamViewRightSide-->TextView
TakeExamViewRightSide-->QuestionPanel
TakeExamViewRightSide-->AnswersPanel
TakeExamViewRightSide-->DomainNameLeftPanel
TakeExamViewRightSide-->DomainNameRightPanel
TakeExamViewRightSide-->Button
TakeExamViewLeftSide-->Button
TakeExamViewLeftSide-->TimeCronometer
DomainNameLeftPanel-->TextLine
DomainNameRightPanel-->TextLine
QuestionPanel-->TextView
AnswersPanel--"4..*"RadioButton
Exam *- "1..*" Question
Question *-down- "4..*" Answer


@enduml